--- a/css/styles1.css
+++ b/css/styles1.css
@@ -24,7 +24,7 @@ html, body {
   color: #fff; background: rgba(0, 0, 0, 0.2); font-size: 14px;
 }
 
-.mdl-chart {
+.wm-chart {
   text-align: center
 }
 
