--- a/css/styles1.css
+++ b/css/styles1.css
@@ -24,10 +24,6 @@ html, body {
   color: #fff; background: rgba(0, 0, 0, 0.2); font-size: 14px;
 }
 
-.wm-chart {
-  text-align: center
-}
-
 .wm-avatar {
   width: 48px;
   height: 48px;
@@ -125,15 +121,23 @@ html, body {
 }
 .wm-chart:nth-child(1) {
   color: #ACEC00;
+  text-align: center  
 }
 .wm-chart:nth-child(2) {
-  color: #00BBD6;
+  color: green;/*#00BBD6;*/
+   text-align: center
 }
 .wm-chart:nth-child(3) {
-  color: #BA65C9;
+  color: blue;/*#BA65C9;*/
+  text-align: center
 }
 .wm-chart:nth-child(4) {
-  color: #EF3C79;
+  color: gray;/*#EF3C79;*/
+  text-align: center
+}
+.wm-chart:nth-child(5) {
+  color: gray;/*#EF3C79;*/
+  text-align: center
 }
 .wm-graphs {
   padding: 16px 32px;
