--- a/css/styles1.css
+++ b/css/styles1.css
@@ -121,23 +121,23 @@ html, body {
 }
 .wm-chart:nth-child(1) {
   color: #ACEC00;
-  text-align: center  
+  text-align: center; 
 }
 .wm-chart:nth-child(2) {
   color: green;/*#00BBD6;*/
-   text-align: center
+   text-align: center;
 }
 .wm-chart:nth-child(3) {
   color: blue;/*#BA65C9;*/
-  text-align: center
+  text-align: center;
 }
 .wm-chart:nth-child(4) {
   color: gray;/*#EF3C79;*/
-  text-align: center
+  text-align: center;
 }
 .wm-chart:nth-child(5) {
   color: gray;/*#EF3C79;*/
-  text-align: center
+  text-align: center;
 }
 .wm-graphs {
   padding: 16px 32px;
