--- a/css/styles1.css
+++ b/css/styles1.css
@@ -17,6 +17,12 @@
 html, body {
   font-family: 'Roboto', 'Helvetica', sans-serif;
 }
+ol,ul {
+    line-height: 100%
+    padding: 0;
+    margin: 0;
+}
+
 .mdl-card {
   width: 100%;
 }
