--- a/css/styles1.css
+++ b/css/styles1.css
@@ -18,7 +18,23 @@ html, body {
   font-family: 'Roboto', 'Helvetica', sans-serif;
 }
 ol,ul {
+  list-style:none;
     line-height: 100%
+    padding: 0;
+    margin: 0;
+}
+dt {
+ float:left;
+ clear:left;  
+ /* text-align:right;*/
+ width:10em;
+ color:#bbb;
+ margin-right:0.7em;
+ padding: 0;
+}
+dd {
+ float:left;
+ color:#999
     padding: 0;
     margin: 0;
 }
